prestashop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop-service
  namespace: prestashop-project
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: prestashop
